fix overlapping icon

--- a/sections/EventSection/eventSection.module.scss
+++ b/sections/EventSection/eventSection.module.scss
@@ -49,5 +49,4 @@
 .avatarsContainer {
   display: flex;
   top: -20px;
-  z-index: 100;
 }
